REST API, get/post 기능(만) 구현 완료

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "seoan-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -25,10 +24,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "preclient": "npm run build",
     "client": "react-scripts start",
     "server": "node server.js",
-    "local": "concurrently --kill-others-on-fail \"npm run client\" \"npm run server\""
+    "prelocal": "npm run build",
+    "local": "concurrently --kill-others-on-fail \"react-scripts start\" \"npm run server\""
   },
   "eslintConfig": {
     "extends": [
