--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "client": "react-scripts start",
+    "client": "set HTTPS=true && set SSL_CRT_FILE=./localhost.pem && set SSL_KEY_FILE=./localhost-key.pem && react-scripts start",
     "server": "node server.js",
     "prelocal": "npm run build",
     "local": "concurrently --kill-others-on-fail \"react-scripts start\" \"npm run server\""
