--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
   "name": "seoan-portfolio",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.5",
-    "concurrently": "^8.0.1",
+    "axios": "^1.5.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.9",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^6.1.0",
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "npm run build && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "client": "set HTTPS=true && set SSL_CRT_FILE=./localhost.pem && set SSL_KEY_FILE=./localhost-key.pem && react-scripts start",
+    "client": "",
+    "preserver": "npm run build",
     "server": "node server.js",
-    "prelocal": "npm run build",
+    "prelocal": "npm run build && set HTTPS=true && set SSL_CRT_FILE=./localhost.pem && set SSL_KEY_FILE=./localhost-key.pem",
     "local": "concurrently --kill-others-on-fail \"react-scripts start\" \"npm run server\""
   },
   "eslintConfig": {
@@ -46,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "pm2": "^5.3.0"
   }
 }
