--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "client": "",
     "preserver": "npm run build",
     "server": "node server.js",
-    "prelocal": "npm run build && set HTTPS=true && set SSL_CRT_FILE=./localhost.pem && set SSL_KEY_FILE=./localhost-key.pem",
-    "local": "concurrently --kill-others-on-fail \"react-scripts start\" \"npm run server\""
+    "preclient": "npm run build && set HTTPS=true && set SSL_CRT_FILE=./localhost.pem && set SSL_KEY_FILE=./localhost-key.pem",
+    "client": "concurrently --kill-others-on-fail \"react-scripts start\" \"npm run server\"",
+    "local": "set HTTPS=true && set SSL_CRT_FILE=./localhost.pem && set SSL_KEY_FILE=./localhost-key.pem && npm run server",
+    "staging": "",
+    "prod": "NODE_ENV=production npm run server"
   },
   "eslintConfig": {
     "extends": [
