--- a/.gitignore
+++ b/.gitignore
@@ -12,17 +12,14 @@ aws console.txt
 
 #env var
 .env
+
+#configurations
 ecosystem.config.js
 
 #logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-#settings
-nginx.txt
-nginx_myapp.txt
-nginx-local.txt
 
 # SSL
 localhost.pem
