--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "preserver": "npm run build",
+    "sass": "sass src/styles/css:public/css",
+    "watch:sass": "sass --watch src/styles/css:public/css",
+    "preserver": "npm run sass && npm run build",
     "server": "node server.js",
     "preclient": "npm run build && set HTTPS=true && set SSL_CRT_FILE=./localhost.pem && set SSL_KEY_FILE=./localhost-key.pem",
     "client": "concurrently --kill-others-on-fail \"react-scripts start\" \"npm run server\"",
@@ -51,6 +53,7 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "dart-sass": "^1.25.0",
     "pm2": "^5.3.0"
   }
 }
