--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "start": "npm run build && react-scripts start",
+    "prebuild": "npm run sass",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
