--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "dart-sass": "^1.25.0",
-    "pm2": "^5.3.0"
+    "pm2": "^5.3.0",
+    "typescript": "^5.2.2"
   }
 }
