--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "seoan-portfolio",
-  "version": "1.1.0",
+  "version": "2.0.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.11",
+    "@types/mysql": "^2.15.24",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "axios": "^1.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -16,10 +22,12 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.0",
+    "typescript": "^4.9.5",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "npm run build && react-scripts start",
+    "prebuild": "tsc",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -57,7 +65,6 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "dart-sass": "^1.25.0",
-    "pm2": "^5.3.0",
-    "typescript": "^4.9.5"
+    "pm2": "^5.3.0"
   }
 }
